# opencl-clang

./: .travis.yml  CMakeLists.txt  clang_patches.mbox  common_clang.cpp  options_compile.cpp  pch_mgr.cpp
cclang/: CMakeLists.txt  common_clang.cpp  options_compile.cpp
patches/SPIRV-LLVM-Translator/: 0001-Downgrade-to-LLVM-5.0-level.patch  0002-Revert-Rename-DEBUG-macro-to-LLVM_DEBUG.patch
patches/clang/: 0001-Split-opencl-c.h-into-separate-headers-for-OpenCL-1..patch  0002-Add-missing-SPIR-metadata-support-to-clang.patch  0002-SPIR-Add-missing-SPIR-metadata-support-to-clang.patch
